deploy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kubecost
spec:
  rules:
    - host: feelingai.devopsfor.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feeling-ai-service
                port:
                  number: 80
  ingressClassName: nginx
